tests/NormalTests/paczka1/fuzzy1/19876520.err
Error in line 1: S19 S19 26,3
Error in line 17: Y/Y8k A6/ 8/,6
Error in line 5: rp4oFVa A64 68,8
Error in line 30: S19 S19 49,3
Error in line 21: Y4Y8k S19 69,9
Error in line 33: Y4Y8k S407 65,2
Error in line 35: Y4Y8k A64 80,2
